work in progress CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,11 @@ jobs:
       run: |
         export DEBIAN_FRONTEND=noninteractive
         dpkg --add-architecture arm64
+        apt-get update && apt-get install -y software-properties-common
         add-apt-repository -y ppa:rpi-distro/ppa
 
     - name: Install dependancies
-      run: apt-get update && apt-get install -y cmake git aspberrypi-kernel-headers
+      run: apt-get update && apt-get install -y cmake git raspberrypi-kernel-headers
 
     - name: Install ARM 64-bit toolchain
       run: apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libgnutls28-dev:arm64 libboost-dev:arm64 libudev-dev:arm64 libgstreamer1.0-dev:arm64 libgstreamer-plugins-base1.0-dev:arm64 libevent-dev:arm64 qtbase5-dev:arm64 libqt5core5a:arm64 libqt5gui5:arm64 libqt5widgets5:arm64 qttools5-dev-tools:arm64 libtiff-dev:arm64 libexif-dev:arm64 libjpeg-dev:arm64 libyaml-dev:arm64
