--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         export DEBIAN_FRONTEND=noninteractive
         dpkg --add-architecture arm64
         echo 'deb http://archive.raspberrypi.org/debian/ bullseye main' > /etc/apt/sources.list.d/raspi.list
+        apt-get update && apt-get install -y gnupg
         apt-key adv --keyserver pgp.mit.edu --recv-keys 82B129927FA3303E
         
     - name: Install dependancies
