--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,7 @@ jobs:
       run: |
         export DEBIAN_FRONTEND=noninteractive
         dpkg --add-architecture arm64
-        apt-get update && apt-get install -y gnupg
-        apt-key adv --keyserver pgp.mit.edu --recv-keys 82B129927FA3303E
+        apt-get update && apt-get install -y debian-archive-keyring
         echo 'deb http://archive.raspberrypi.org/debian/ bullseye main' > /etc/apt/sources.list.d/raspi.list
 
     - name: Install dependancies
