--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uname -r
         export DEBIAN_FRONTEND=noninteractive
         dpkg --add-architecture arm64
-        apt-get update && apt-get install -y debian-keyring gnupg
+        apt-get update && apt-get install -y debian-keyring gnupg make
         gpg --keyserver pgp.mit.edu --recv-keys 82B129927FA3303E
         gpg --armor --export 82B129927FA3303E | apt-key add -
         echo 'deb http://archive.raspberrypi.org/debian/ bullseye main' > /etc/apt/sources.list.d/raspi.list
