--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,10 @@ jobs:
       run: |
         export DEBIAN_FRONTEND=noninteractive
         dpkg --add-architecture arm64
-        apt-get update && apt-get install -y debian-keyring gnupg make
+        apt-get update && apt-get install -y debian-keyring gnupg make apt-key
         #gpg --keyserver https://keys.openpgp.org --recv-keys 82B129927FA3303E
         #gpg --armor --export 82B129927FA3303E | apt-key add -
+        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 82B129927FA3303E
         echo 'deb http://archive.raspberrypi.org/debian/ bullseye main' > /etc/apt/sources.list.d/raspi.list
 
     - name: Install dependancies
