--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,3 +62,16 @@ jobs:
         name: imx662
         path: drivers/media/i2c/imx662.ko
         if-no-files-found: error
+
+    - name: Build bcm2835-unicam kernel driver
+      run: |
+        cd drivers/media/platform/bcm2835
+        make clean
+        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- KERNEL=6.1.21-v8+ MODNAME=bcm2835-unicam
+
+    - name: Upload bcm2835-unicam driver artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: bcm2835-unicam
+        path: drivers/media/platform/bcm2835/bcm2835-unicam.ko
+        if-no-files-found: error
