updated makefile for out of tree  bcm2835-unicam driver

--- a/drivers/media/platform/bcm2835/Makefile
+++ b/drivers/media/platform/bcm2835/Makefile
@@ -1,3 +1,9 @@
-# Makefile for BCM2835 Unicam driver
-
-obj-$(CONFIG_VIDEO_BCM2835_UNICAM) += bcm2835-unicam.o
+KERNEL?=$(shell uname -r)
+MODNAME?=bcm2835-unicam
+obj-m := $(MODNAME).o
+all:
+	make -C /lib/modules/$(KERNEL)/build M=$(PWD) modules
+install:
+	make -C /lib/modules/$(KERNEL)/build M=$(PWD) modules_install
+clean:
+	rm -fR .*.cmd *.o *.ko .tmp_versions Module.symvers modules.order *.mod.c
